--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -16,12 +16,16 @@
     "@angular/common": "~11.2.7",
     "@angular/compiler": "~11.2.7",
     "@angular/core": "~11.2.7",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "~11.2.7",
     "@angular/material": "^11.2.7",
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
+    "angularfire2": "^5.4.2",
+    "firebase": "^7.24.0",
     "rxjs": "~6.6.0",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
